# MMExercise4

./: .env  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: ed0a5e11000b_create_user_table.py
app/: auth.py  db.py  main.py  seed.py
app/Models/: userORM.py  users.py
mmexercise4-frontend/: package-lock.json  package.json
mmexercise4-frontend/src/: App.js  CreateUser.jsx  LoginPage.jsx  UpdateUser.jsx  UserInfo.jsx  api.js
